--- a/Home.css
+++ b/Home.css
@@ -107,7 +107,7 @@ html, body {
 .hero {
   height: 100vh;
   width: 100%;
-  background: url("../Assets/project3.jpg") center/cover no-repeat;
+  background: url("Assets/project3.jpg") center/cover no-repeat;
   position: relative;
   display: flex;
   align-items: center;
@@ -365,7 +365,7 @@ section {
   position: relative;
   height: 80%;
   margin-right: 80px;
-  background: url("../Assets/project7.jpg") center/cover no-repeat;
+  background: url("Assets/project7.jpg") center/cover no-repeat;
 }
 
 .image-overlay {
@@ -395,7 +395,7 @@ section {
 @media (max-width: 900px) {
   .intro-section {
     grid-template-columns: 1fr;
-    margin-top: 80px;
+    margin-top: 60px;
   }
 
   .intro-text {
@@ -561,7 +561,7 @@ section {
 /* RESPONSIVE */
 @media (max-width: 1100px) {
   .projects {
-    padding: 120px 40px;
+    padding: 80px 40px;
   }
 
   .projects-grid {
@@ -670,7 +670,7 @@ section {
 /* RESPONSIVE */
 @media (max-width: 1000px) {
   .services {
-    padding: 120px 40px;
+    padding: 80px 40px;
   }
 
   .services-grid {
@@ -766,7 +766,7 @@ section {
   }
 
   .process-number {
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
 
   .process-media {
@@ -793,7 +793,7 @@ section {
 .cta-section {
   position: relative;
   padding: 100px 80px;
-  background: url("../Assets/project4.jpg") center/cover no-repeat;
+  background: url("Assets/project4.jpg") center/cover no-repeat;
   color: #fff;
   overflow: hidden;
 }
@@ -996,7 +996,7 @@ section {
   }
 
   .cta-section {
-    padding: 120px 30px;
+    padding: 80px 30px;
   }
 }
 
@@ -1132,4 +1132,5 @@ section {
     text-align: center;
   }
 }
+
 
